# ZPlugin_alphaWrap

./: .gitignore  .gitmodules  CMakeLists.txt  build.sh  configureCMake.sh  main.cpp  vcpkg.json  x64-osx-supported-release.cmake  x64-osx-supported.cmake
ZPlugs64/: alphaWrap_2022.txt  alphaWrap_2022.zsc
ZPlugs64/alphaWrap_2022/: alphaWrap.lib
ZPlugs64/alphaWrap_2022/lang/: alphaWrap_2022_en.xml  alphaWrap_2022_jp.xml
plugin/: CMakeLists.txt
plugin/include/: alphaWrap.h  readGoZAndTriangulate.h  wrap.h
plugin/src/: alphaWrap.cpp  readGoZAndTriangulate.cpp  wrap.cpp
